<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/foodcv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true"
        tools:context=".SchoolFood">

        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:weightSum="1"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toEndOf="@+id/frameLayout"
                    android:layout_toRightOf="@+id/frameLayout">

                    <TextView
                        android:id="@+id/food_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_alignParentTop="true"
                        android:maxLines="1"
                        android:text="2000년 00월 00일"
                        android:textColor="#000"
                        android:textSize="28sp"
                        />

                    <TextView
                        android:id="@+id/food_lunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/food_date"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/lunch"
                        android:textColor="#353535"
                        android:textSize="22sp"
                        />

                    <TextView
                        android:id="@+id/food_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/food_lunch"
                        android:layout_marginTop="3dp"
                        android:maxLines="20"
                        android:text="@string/text_no_lunch"
                        android:textColor="#5D5D5D"
                        android:textSize="16sp"
                        >
                    </TextView>

                    <TextView
                        android:id="@+id/food_dinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:text="@string/dinner"
                        android:textColor="#353535"
                        android:layout_below="@+id/food_content"
                        android:textSize="22sp"
                        />

                    <TextView
                        android:id="@+id/food_content_dinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/food_dinner"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="6dp"
                        android:maxLines="20"
                        android:text="@string/text_no_dinner"
                        android:textColor="#5D5D5D"
                        android:textSize="16sp"
                        >
                    </TextView>

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>